--- a/examples/nextjs/package.json
+++ b/examples/nextjs/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "next": "12.1.5",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "microcms-iframe-react": "^0.0.1"
   },
   "devDependencies": {
     "@types/node": "17.0.29",
