--- a/examples/react/package.json
+++ b/examples/react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "color-picker",
+  "name": "microcms-iframe-app-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
