--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -13,8 +13,8 @@
     "dev": "tsup index.ts --format esm,cjs --watch --dts --external react"
   },
   "devDependencies": {
-    "@types/react": "^17.0.37",
-    "@types/react-dom": "^17.0.11",
+    "@types/react": "18.0.8",
+    "@types/react-dom": "18.0.2",
     "config": "*",
     "microcms-iframe-api": "*",
     "tsconfig": "*",
