--- a/examples/amazon-s3/package.json
+++ b/examples/amazon-s3/package.json
@@ -9,18 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "aws-sdk": "^2.1123.0",
-    "microcms-iframe-react": "^0.0.1",
-    "next": "12.1.5",
+    "aws-sdk": "^2.1132.0",
+    "microcms-iframe-react": "^0.0.5",
+    "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0"
   },
   "devDependencies": {
-    "@types/node": "17.0.29",
-    "@types/react": "18.0.8",
-    "@types/react-dom": "18.0.0",
-    "eslint": "8.14.0",
-    "eslint-config-next": "12.1.5",
-    "typescript": "4.6.3"
+    "@types/eslint": "8.4.2",
+    "@types/node": "17.0.32",
+    "@types/react": "18.0.9",
+    "@types/react-dom": "18.0.3",
+    "eslint": "8.15.0",
+    "eslint-config-next": "12.1.6",
+    "typescript": "4.6.4"
   }
 }
