--- a/examples/react/package.json
+++ b/examples/react/package.json
@@ -5,9 +5,9 @@
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
-    "@testing-library/user-event": "^13.5.0",
-    "microcms-iframe-api": "^0.0.4",
-    "microcms-iframe-react": "^0.0.3",
+    "@testing-library/user-event": "^14.1.1",
+    "microcms-iframe-api": "^0.0.7",
+    "microcms-iframe-react": "^0.0.6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1"
@@ -41,5 +41,11 @@
     "@types/react-dom": "18.0.2",
     "@types/node": "16.11.33",
     "typescript": "4.6.3"
+  },
+  "devDependencies": {
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.3",
+    "@types/testing-library__jest-dom": "^5.14.3",
+    "@types/testing-library__user-event": "^4.2.0"
   }
 }
