--- a/examples/google-cloud-storage/package.json
+++ b/examples/google-cloud-storage/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "microcms-iframe-app-nextjs",
+  "name": "microcms-iframe-app-nextjs-gcp-storage",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,10 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google-cloud/storage": "^5.19.4",
+    "microcms-iframe-react": "^0.0.6",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "microcms-iframe-react": "^0.0.6"
+    "react-dom": "18.1.0"
   },
   "devDependencies": {
     "@types/eslint": "8.4.2",
