Rename package name

--- a/examples/amazon-s3/package.json
+++ b/examples/amazon-s3/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "microcms-iframe-app-amazon-s3",
+  "name": "microcms-field-extension-app-amazon-s3",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "aws-sdk": "^2.1132.0",
-    "microcms-iframe-react": "^0.0.6",
+    "microcms-field-extension-react": "^0.0.6",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0"
