--- a/examples/nextjs/package.json
+++ b/examples/nextjs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "microcms-iframe-app-nextjs",
+  "name": "microcms-field-extension-app-nextjs",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -12,7 +12,7 @@
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "microcms-iframe-react": "^0.0.6"
+    "microcms-field-extension-react": "^0.0.6"
   },
   "devDependencies": {
     "@types/eslint": "8.4.2",
