--- a/examples/react/package.json
+++ b/examples/react/package.json
@@ -6,8 +6,8 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^14.1.1",
-    "microcms-iframe-api": "^0.0.7",
-    "microcms-iframe-react": "^0.0.6",
+    "microcms-field-extension-api": "^0.0.7",
+    "microcms-field-extension-react": "^0.0.6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1"
