--- a/examples/amazon-s3/package.json
+++ b/examples/amazon-s3/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "aws-sdk": "^2.1139.0",
-    "microcms-field-extension-react": "^0.0.8",
+    "microcms-field-extension-react": "latest",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0"
