--- a/examples/address-from-zipcode/package.json
+++ b/examples/address-from-zipcode/package.json
@@ -10,17 +10,17 @@
   },
   "dependencies": {
     "microcms-field-extension-react": "latest",
-    "next": "15.2.4",
+    "next": "^15.3.1",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
   "devDependencies": {
     "@types/eslint": "^9.6.1",
     "@types/node": "^22.13.17",
-    "@types/react": "19.0.12",
-    "@types/react-dom": "19.0.4",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
     "eslint": "^9.23.0",
-    "eslint-config-next": "15.2.4",
+    "eslint-config-next": "^15.3.1",
     "typescript": "^5.8.2"
   },
   "overrides": {
