package.jsonとturbo.jsonにビルドおよび型チェック用のスクリプトを追加

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -11,7 +11,8 @@
   "scripts": {
     "prebuild": "rm -rf dist/",
     "build": "tsc",
-    "dev": "tsc"
+    "dev": "tsc",
+    "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
     "tsconfig": "*",
