--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -10,7 +10,8 @@
   "license": "MIT",
   "scripts": {
     "build": "tsup index.ts --format esm,cjs --dts --external react",
-    "dev": "tsup index.ts --format esm,cjs --watch --dts --external react"
+    "dev": "tsup index.ts --format esm,cjs --watch --dts --external react",
+    "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
     "@types/react": "18.0.8",
