--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -7,6 +7,18 @@
   "files": [
     "dist/**"
   ],
+  "publishConfig": {
+    "access": "public",
+    "provenance": true
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/microcmsio/microcms-field-extension.git",
+    "directory": "packages/react"
+  },
+  "bugs": {
+    "url": "https://github.com/microcmsio/microcms-field-extension/issues"
+  },
   "license": "MIT",
   "scripts": {
     "build": "tsup index.ts --format esm,cjs --dts --external react",
