--- a/examples/monaco-html-editor/package.json
+++ b/examples/monaco-html-editor/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.7.0",
+    "microcms-field-extension-api": "^1.1.0",
+    "microcms-field-extension-react": "^1.1.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
