--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -95,6 +95,4 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: publish
-        run: npm publish --provenance -w packages/${{ inputs.package }}
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: npm publish -w packages/${{ inputs.package }}
