--- a/examples/address-from-zipcode/package.json
+++ b/examples/address-from-zipcode/package.json
@@ -10,9 +10,9 @@
   },
   "dependencies": {
     "microcms-field-extension-react": "latest",
-    "next": "^15.3.1",
-    "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "next": "^15.3.6",
+    "react": "^19.1.2",
+    "react-dom": "^19.1.2"
   },
   "devDependencies": {
     "@types/eslint": "^9.6.1",
@@ -20,7 +20,7 @@
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "eslint": "^9.23.0",
-    "eslint-config-next": "^15.3.1",
+    "eslint-config-next": "^15.3.6",
     "typescript": "^5.8.2"
   }
 }
